--- a/theme/layout.mustache
+++ b/theme/layout.mustache
@@ -4,7 +4,7 @@
   <meta charset="{{encoding}}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>{{title}}</title>
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,700,500' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link rel="stylesheet" href="theme/font-awesome.css">
   <style type="text/css">
     {{{style}}}
@@ -13,7 +13,7 @@
 <body>
   {{{slideshow}}}
   {{#metadata}}
-  <img src="{{logo}}" alt="YYC.js logo" class="logo">
+  <img src="{{logo}}" alt="MySam logo" class="logo">
   {{/metadata}}
   <script type="text/javascript">
     {{{script}}}
