--- a/theme/style.css
+++ b/theme/style.css
@@ -10,27 +10,31 @@ html, body {
 }
 
 body {
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 100;
   color: #333333;
-  background: url('theme/logo.png') #FFFFFF right bottom no-repeat;
   margin: 0;
 }
 
+a {
+  color: #e9485e;
+}
+
 h1 {
-  font-weight: 900;
+  font-weight: normal;
   margin: 20px 0 20px 0;
+  color: #d456b1;
 }
 
 h2 {
-  color: #AAAAAA;
-  font-weight: 500;
+  color: #d456b1;
+  font-weight: normal;
   font-size: 200%;
   margin: 20px 0;
 }
 
 h3 {
-  font-weight: 300;
+  font-weight: normal;
 }
 
 p {
@@ -45,8 +49,8 @@ ul {
   padding: 20px 0 20px 60px;
 }
 
-.progress-bar {
-  background: #DF6868;
+.centered {
+  text-align: center;
 }
 
 .logo {
@@ -76,6 +80,10 @@ ul {
     height: 80px;
     width: 80px;
   }
+}
+
+.slide {
+  background: url('theme/logo.png') transparent right bottom no-repeat;
 }
 
 .slide-content {
@@ -162,21 +170,70 @@ pre {
   border: none;
 }
 
-.code-large {
-  font-size: 120%;
-}
-
 .code-large pre {
+  font-size: 120%;
   padding-top: 2em;
-}
-
-.how {
-  background-image: url('img/dracones.jpg');
-  background-size: cover;
-  color: #FAFAFA;
-  padding-top: 5em;
 }
 
 .questions li {
   margin: 20px 0;
+}
+
+.progress {
+  top: 100%;
+  margin-top: -10px;
+}
+
+.progress-bar {
+  height: 10px;
+  background-color: #e9485e;
+  background-image: -webkit-linear-gradient(left, #e9485e, #35344a);
+  background-image: -moz-linear-gradient(left, #e9485e, #35344a);
+  background-image: -o-linear-gradient(left, #e9485e, #35344a);
+  background-image: -ms-linear-gradient(left, #e9485e, #35344a);
+  background-image: linear-gradient(left, #e9485e, #35344a);
+  height: 10px;
+}
+
+.intro {
+  background: url('img/main-background.svg') transparent;
+  background-size: cover;
+}
+
+.intro h1 {
+  margin-top: 15%;
+  color: #F3F3F3;
+}
+
+.marvin.slide {
+  background: none;
+  background-color: #35344A;
+}
+
+.marvin .quote-container {
+  display: block;
+  width: 40%;
+  margin-top: 1.5em;
+  float: left;
+}
+
+.marvin .quote-container p {
+  font-size: 0.6em;
+  text-align: center;
+}
+
+.marvin h2 {
+  color: #F3F3F3;
+  font-style: italic;
+}
+
+.marvin h2 small {
+  font-style: normal;
+  color: #818181;
+}
+
+.marvin img {
+  display: block;
+  float: right;
+  height: 100%;
 }
